--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
+
+<!-- Default Layout -->
+
   <head>
     <title>CartoLib</title>
 
@@ -41,7 +44,6 @@
         marker-allow-overlap: true;
       }
     </style>
-
    
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
@@ -59,22 +61,73 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right" id="dropdown-results">
               <li>
-                <a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Who We Are</a>
+                <a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
               </li>
               <li>
                 <a href="form.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
-              </li>
-              <li>
-                <a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i> Contact Us</a>
               </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
+    <div class='row'>
+      <div class='container'>
+        <div class='col-md-12'>
+          <h2 style="text-align: center"><br><strong>What We Are</strong></h2>
+        </div>
+        <div class='col-md-1'></div>
+        <div class='col-md-10'>
+            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland.</p>
+            
+            <br><p>The CUAMP administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
+        </div>
+        <div class='col-md-12'>
+          <h2 style="text-align: center"><br><strong>How We Help</strong></h2>
+        </div>
+        <div class='col-md-1'></div>
+        <div class='col-md-10'>
+            <br><p>CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
+        </div>
+        <div class='col-md-12'>
+          <h2 style="text-align: center"><br><strong>How You Help</strong></h2>
+        </div>
+        <div class='col-md-1'></div>
+        <div class='col-md-10'>
+            <br><p>Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
+        </div>
+        <div class='col-md-12'>
+          <h2 style="text-align: center"><br><strong>How We Handle Privacy</strong></h2>
+        </div>
+        <div class='col-md-1'></div>
+        <div class='col-md-10'>
+            <br><p>It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.</p>
+        </div>
+      </div>
     </div>
 
   </body>
+
+  <footer>  
+    <div class="panel-footer">
+      <div class='col-md-12' style='text-align: center;'>
+        <h3><u>Get in Touch</u></h3>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
+          <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
+          <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
+          <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
+      </div>
+    </div>
+  </footer>
+  
 </html>
 
 
