--- a/form.html
+++ b/form.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
+
+<!-- Default Layout -->
+
   <head>
     <title>CartoLib</title>
 
@@ -59,22 +62,40 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right" id="dropdown-results">
               <li>
-                <a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Who We Are</a>
+                <a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
               </li>
               <li>
                 <a href="form.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
-              </li>
-              <li>
-                <a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i> Contact Us</a>
               </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-      <h1>BUILD GOOGLE FORM</h1>
-    </div>
+    
+    <h1>Build the Google Form</h1>
 
   </body>
+
+  <footer>  
+    <div class="panel-footer">
+      <div class='col-md-12' style='text-align: center;'>
+        <h3><u>Get in Touch</u></h3>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
+          <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
+          <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
+      </div>
+      <div class='col-md-4' style="text-align: center;">
+        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
+          <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
+      </div>
+    </div>
+  </footer>
+
 </html>
 
 
