--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     <!-- CDN for getting Font Awesome icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 
     <!-- JavaScript -->
@@ -55,7 +56,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Chicago Urban Agriculture Mapping Project</a>
+          <a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -74,13 +75,11 @@
     <div class='row'>
       <div class='container'>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong>What We Are</strong></h2>
+          <h2 style="text-align: center"><strong>What We Are</strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
-            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland.</p>
-            
-            <br><p>The CUAMP administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
+            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
         </div>
         <div class='col-md-12'>
           <h2 style="text-align: center"><br><strong>How We Help</strong></h2>
@@ -101,7 +100,7 @@
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
-            <br><p>It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.</p>
+            <br><p>It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.<br></p>
         </div>
       </div>
     </div>
@@ -110,18 +109,21 @@
 
   <footer>  
     <div class="panel-footer">
-      <div class='col-md-12' style='text-align: center;'>
-        <h3><u>Get in Touch</u></h3>
+      <div class='col-md-1'>
+        <br><img class="center2" src="images/logo.png"/>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-2'>
+        <h3 style="text-align: center"><br>Connect With Us:</h3>
+      </div>
+      <div class='col-md-3'>
         <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
           <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-3'>
         <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
           <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-3'>
         <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
           <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
       </div>
