--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
     <!-- CDN for getting Font Awesome icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 
     <!-- JavaScript -->
@@ -56,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Chicago Urban Agriculture Mapping Project</a>
+          <a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -78,18 +79,21 @@
 
   <footer>  
     <div class="panel-footer">
-      <div class='col-md-12' style='text-align: center;'>
-        <h3><u>Get in Touch</u></h3>
+      <div class='col-md-1'>
+        <br><img class="center2" src="images/logo.png"/>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-2'>
+        <h3 style="text-align: center"><br>Connect With Us:</h3>
+      </div>
+      <div class='col-md-3'>
         <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
           <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-3'>
         <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
           <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
       </div>
-      <div class='col-md-4' style="text-align: center;">
+      <div class='col-md-3'>
         <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
           <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
       </div>
