--- a/about.html
+++ b/about.html
@@ -75,28 +75,28 @@
     <div class='row'>
       <div class='container'>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><strong>What We Are</strong></h2>
+          <h2 style="text-align: center"><strong><u>What We Are</u></strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
             <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
         </div>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong>How We Help</strong></h2>
+          <h2 style="text-align: center"><br><strong><u>How We Help</u></strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
             <br><p>CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
         </div>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong>How You Help</strong></h2>
+          <h2 style="text-align: center"><br><strong><u>How You Help</u></strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
             <br><p>Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
         </div>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong>How We Handle Privacy</strong></h2>
+          <h2 style="text-align: center"><br><strong><u>How We Handle Privacy</u></strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
