--- a/about.html
+++ b/about.html
@@ -32,20 +32,6 @@
 
   </head>
   <body>
-    <style id="carto-result-style">
-      #carto-result {
-        marker-fill-opacity: 0.9;
-        marker-line-color: #FFF;
-        marker-line-width: 1;
-        marker-line-opacity: 1;
-        marker-placement: point;
-        marker-type: ellipse;
-        marker-width: 8;
-        marker-fill: #3E7BB6;
-        marker-allow-overlap: true;
-      }
-    </style>
-   
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -79,7 +65,7 @@
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
-            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a>, <a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a>, and <a href="http://steans.depaul.edu/" target="_blank">DePaul University's Irwin W. Steans Center</a>.</p>
+            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank"><u>NeighborSpace</u></a>, <a href="https://auachicago.org/" target="_blank"><u>Advocates for Urban Agriculture</u></a>, and <a href="http://steans.depaul.edu/" target="_blank"><u>DePaul University's Irwin W. Steans Center</u></a>.</p>
         </div>
         <div class='col-md-12'>
           <h2 style="text-align: center"><br><strong><u>How We Help</u></strong></h2>
@@ -96,7 +82,7 @@
             <br><p>Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
         </div>
         <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong><u>How We Handle Privacy</u></strong></h2>
+          <h2 style="text-align: center"><br><strong><u>Handling Privacy</u></strong></h2>
         </div>
         <div class='col-md-1'></div>
         <div class='col-md-10'>
