--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       #carto-result {
         marker-fill-opacity: 0.9;
         marker-line-color: #FFF;
-        marker-line-width: 1;
+        marker-line-width: 1.3;
         marker-line-opacity: 1;
         marker-placement: point;
         marker-type: ellipse;
-        marker-width: 8;
-        marker-fill: #3E7BB6;
+        marker-width: 9;
+        marker-fill: #3B961C;
         marker-allow-overlap: true;
       }
     </style>
@@ -75,10 +75,9 @@
 
 
     <div class="container">
-
       <div class="row">
         <div class="col-md-4">
-          <h4>Find public gardens near you in Chicago.</h4>
+          <h4>Find Chicago public gardens near you:</h4>
           <div class="form-group">
             <input class='form-control' id='search-address' placeholder='Enter an address or an intersection' type='text'>
           </div>
