--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- CDN for getting Font Awesome icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
     <!-- JavaScript -->
@@ -43,6 +43,16 @@
         marker-width: 9;
         marker-fill: #3B961C;
         marker-allow-overlap: true;
+      }
+    </style>
+
+    <style id="carto-result-style2">
+      #carto-result2 {
+        polygon-fill: #A1285D;
+        polygon-opacity: 0.7;
+        line-color: #680D35;
+        line-width: 0.5;
+        line-opacity: 1;
       }
     </style>
 
@@ -89,6 +99,63 @@
               <option value='1610'>1 mile</option>
               <option value='3220'>2 miles</option>
               <option value='8050'>5 miles</option>
+            </select>
+          </div>
+
+          <div class='form-group'>
+            Filter by Ward
+            <select id='ward-number' class='form-control'>
+              <option></option>
+              <option value='1'>1st</option>
+              <option value='2'>2nd</option>
+              <option value='3'>3rd</option>
+              <option value='4'>4th</option>
+              <option value='5'>5th</option>
+              <option value='6'>6th</option>
+              <option value='7'>7th</option>
+              <option value='8'>8th</option>
+              <option value='9'>9th</option>
+              <option value='10'>10th</option>
+              <option value='11'>11th</option>
+              <option value='12'>12th</option>
+              <option value='13'>13th</option>
+              <option value='14'>14th</option>
+              <option value='15'>15th</option>
+              <option value='16'>16th</option>
+              <option value='17'>17th</option>
+              <option value='18'>18th</option>
+              <option value='19'>19th</option>
+              <option value='20'>20th</option>
+              <option value='21'>21st</option>
+              <option value='22'>22nd</option>
+              <option value='23'>23rd</option>
+              <option value='24'>24th</option>
+              <option value='25'>25th</option>
+              <option value='26'>26th</option>
+              <option value='27'>27th</option>
+              <option value='28'>28th</option>
+              <option value='29'>29th</option>
+              <option value='30'>30th</option>
+              <option value='31'>31st</option>
+              <option value='32'>32nd</option>
+              <option value='33'>33rd</option>
+              <option value='34'>34th</option>
+              <option value='35'>35th</option>
+              <option value='36'>36th</option>
+              <option value='37'>37th</option>
+              <option value='38'>38th</option>
+              <option value='39'>39th</option>
+              <option value='40'>40th</option>
+              <option value='41'>41st</option>
+              <option value='42'>42nd</option>
+              <option value='43'>43rd</option>
+              <option value='44'>44th</option>
+              <option value='45'>45th</option>
+              <option value='46'>46th</option>
+              <option value='47'>47th</option>
+              <option value='48'>48th</option>
+              <option value='49'>49th</option>
+              <option value='50'>50th</option>
             </select>
           </div>
 
