--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 
     <style id="carto-result-style2">
       #carto-result2 {
-        polygon-fill: #A1285D;
+        polygon-fill: #41ab5d;
         polygon-opacity: 0.7;
-        line-color: #680D35;
+        line-color: #006d2c;
         line-width: 0.5;
         line-opacity: 1;
       }
     </style>
 
-   
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -173,7 +172,7 @@
     </div>
   </body>
 
-  <footer>  
+  <footer>
     <div class="panel-footer">
       <div class='col-md-1'>
         <br><img class="center2" src="images/logo.png"/>
