--- a/index.html
+++ b/index.html
@@ -56,18 +56,19 @@
       }
     </style>
 
+
+
    
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <img class="center" src="images/logo.png"/>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
+            <img class="navbar-brand" src="images/logo.png"/><a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -176,7 +177,7 @@
   <footer>  
     <div class="panel-footer">
       <div class='col-md-1'>
-        <br><img class="center2" src="images/logo.png"/>
+        <br><img src="images/logo.png"/>
       </div>
       <div class='col-md-2'>
         <h3 style="text-align: center"><br>Connect With Us:</h3>
