Css and js updates

--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
 
     <style id="carto-result-style2">
       #carto-result2 {
-        polygon-fill: #41ab5d;
-        polygon-opacity: 0.7;
-        line-color: #006d2c;
-        line-width: 0.5;
-        line-opacity: 1;
+        polygon-opacity: 0.2;
+        line-color: #155600;
+        line-width: 0.9;
+        line-opacity: 0.8;
       }
     </style>
 
@@ -65,7 +64,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <img class="navbar-brand" src="images/logo.png"/><a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
+          <img class="navbar-brand" style="width: 3.5em; height: 100%;" src="images/logo.png"/>
+          <a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
+          </ahref="index.html">
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -173,11 +174,8 @@
 
   <footer>
     <div class="panel-footer">
-      <div class='col-md-1'>
-        <br><img src="images/logo.png"/>
-      </div>
-      <div class='col-md-2'>
-        <h3 style="text-align: center"><br>Connect With Us:</h3>
+      <div class='col-md-3'>  
+        <h3 style="line-height: 4em">Connect With Us:</h3>
       </div>
       <div class='col-md-3'>
         <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
