--- a/form.html
+++ b/form.html
@@ -50,14 +50,15 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <img class="center" src="images/logo.png"/>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <img class="navbar-brand" style="width: 3.5em; height: 100%;" src="images/logo.png"/>
           <a class="navbar-brand" href="index.html">The Chicago Urban Agriculture Mapping Project</a>
+          </ahref="index.html">
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
@@ -85,13 +86,10 @@
     </div>
     
 
-  <footer>  
+    <footer>
     <div class="panel-footer">
-      <div class='col-md-1'>
-        <br><img class="center2" src="images/logo.png"/>
-      </div>
-      <div class='col-md-2'>
-        <h3 style="text-align: center"><br>Connect With Us:</h3>
+      <div class='col-md-3'>  
+        <h3 style="line-height: 4em">Connect With Us:</h3>
       </div>
       <div class='col-md-3'>
         <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
